--- a/fansite.html
+++ b/fansite.html
@@ -19,23 +19,23 @@
                 <img id="logo-nav" src="assets/fifa.logo.png" alt="logo">
 
                 <li><a href="https://www.ea.com/fr-fr/games/fifa/fifa-22/news">actualité</a></li>
-                <li><a href="#évenements">Evenements</a></li>
-                <li><a href="#média">Média</a></li>
+                <li><a href="fansite1.html">Evenements</a></li>
+                <li><a href="fansite2.html">Média</a></li>
                 <li><a href="formulaire.html">Contact</a></li>
 
             </ul>
 
         </nav>
 
+
+    </header>
+
+    <main class="mainfansite">
         <div id="image-princip">
             <h1>Fansite FIFA 22</h1>
             <div id="premierTrait"></div>
-
-            <!-- <h3>Le site pour les fans de FIFA</h3> -->
         </div>
-    </header>
 
-    <main>
         <section id="presentations">
             <div class="h2">
                 <h2>Fifa 22 : plus qu'un jeu</h2>
