--- a/fansite2.html
+++ b/fansite2.html
@@ -1,56 +1,121 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="fansite1.css">
+    <link rel="stylesheet" href="fansite.css">
 
     <title>Fansite</title>
 
-        <h1 class="media"> MÉDIA COMPILATION</h1>
+    <h1 class="media"> MÉDIA COMPILATION</h1>
 
 </head>
 
 <body class="bodyb">
 
+    <header>
+        <!-- ****************navbar***************** -->
+        <nav class="inner-header">
+            <ul>
+                <img id="logo-nav" src="assets/fifa.logo.png" alt="logo">
 
-         <div><img class="logo3" src="fifa.logo.png" alt=""></div>
-         <div><img class="logo4" src="fifa.logo.png" alt=""></div>
+                <li><a href="https://www.ea.com/fr-fr/games/fifa/fifa-22/news">actualité</a></li>
+                <li><a href="fansite1.html">Evenements</a></li>
+                <li><a href="fansite2.html">Média</a></li>
+                <li><a href="formulaire.html">Contact</a></li>
+
+            </ul>
+
+        </nav>
+
+    </header>
 
 
-    <div class="meilleur"><strong><em><h2>Le meilleur de fifa</h2></em></strong></div>
+
+    <div><img class="logo3" src="fifa.logo.png" alt=""></div>
+    <div><img class="logo4" src="fifa.logo.png" alt=""></div>
 
 
-<div class="videobutetcoupfranc">
+    <div class="meilleur"><strong><em>
+                <h2>Le meilleur de fifa</h2>
+            </em></strong></div>
 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/vas0qRn0Y6g" 
-                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+
+    <div class="videobutetcoupfranc">
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/vas0qRn0Y6g" title="YouTube video player"
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
                 gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/QiL9NrLZWlQ" title="YouTube video player" 
-                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/QiL9NrLZWlQ" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
 
-</div>
-
-
-    <div class="pire"><strong><em><h2>Le pire de fifa</h2></em></strong></div>
+    </div>
 
 
-<div class="videofailetdrole">
+    <div class="pire"><strong><em>
+                <h2>Le pire de fifa</h2>
+            </em></strong></div>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/65aG7SzVr2Q" 
-        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+
+    <div class="videofailetdrole">
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/65aG7SzVr2Q" title="YouTube video player"
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
         encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/dk1mjQ8sZQ4" 
-        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dk1mjQ8sZQ4" title="YouTube video player"
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write;
          encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
+    </div>
+
+    <!-- ************FOOTER******************** -->
+    <footer>
+
+        <button>Acheter FIFA22</button>
+
+        <div id="deuxiémeTrait"></div>
 
 
-    
+
+        <!-- *******************ICONS************************* -->
+        <div id="icons">
+
+
+            <a href="http://www.twitter.fr">
+                <img src="https://img.icons8.com/color/48/000000/twitter--v1.png" /></a>
+
+
+            <a href="http://www.instagram.com">
+                <img src="https://img.icons8.com/color/48/000000/instagram-new--v1.png" /></a>
+
+            <a href="http://www.facebook.fr">
+                <img src="https://img.icons8.com/fluency/48/000000/facebook.png" /></a>
+
+            <!-- *********************LOGO-PEGI*********************** -->
+            <div class="img-footer">
+                <img id="pegi"
+                    data-src="https://media.contentapi.ea.com/content/dam/gin/common/rating-icons/pegi/fr.svg" alt=""
+                    loading="lazy" src="https://media.contentapi.ea.com/content/dam/gin/common/rating-icons/pegi/fr.svg"
+                    class="eapl-rating-link__image-auto-width">
+                <img id="logo-fifa" src="assets/fifa.logo.png" alt="logo">
+            </div>
+
+            <!-- ******************copyright********************** -->
+            <div id="copyright">
+                <span>© Salimouari(); 2021</span>
+            </div>
+
+    </footer>
+
+
+
+
 </body>
+
 </html>
